Wed Sep 14 21:40:17 2011  fox

      49* proc.c, monitor.c: Better handling of corrupt/missing pmap files.

Sat Sep 10 22:36:43 2011  fox

      48* Add interrupts command, along with graphs.

Fri Sep  9 21:28:28 2011  fox

      47* proc.c: Fix EVENT field for 64-bit wchan

      46* proc.c: Make sure we turn off graph mode on ^C/quit.

Thu Sep  8 22:58:47 2011  fox

      45* protocol.c, graph.c: Display minigraphs as delta values.

Wed Sep  7 23:01:56 2011  fox

      44* Add: ip, icmp, udp, tcp - stats screens.

Sun Sep  4 17:48:44 2011  fox

      43* proc.c: Do binary search to find original pids, instead of linear.

      42* proc.c: Better handling of procmon terminating/restarting on us.

      41* monitor.c: Avoid reading /proc/pid/syscall if we are not root
          or its not our uid (performance).

Sat Sep  3 22:14:10 2011  fox

      40* proc.c, monitor.c: Add stale procmon detector.

Fri Sep  2 22:39:23 2011  fox

      39* monitor.c: Avoid pointless reads of /proc/self/syscall.

      38* proc.c: Avoid double (pointless) read on /proc/pid/cmdline.

Thu Sep  1 22:54:55 2011  fox

      37* monitor.c: When looking at a TIME_WAIT socket, try and maintain
          the userid of the time wait original owner.

      36* netstat.c: Add persistent port caching.

Wed Aug 31 22:08:15 2011  fox

      35* netstat.c: Avoid potential port storm.

Tue Aug 30 21:09:39 2011  fox

      34* netstat.c: Sort sockets into new/time order. Highlight new sockets.
          Add support for grep on state.

      33* netstat.c: Add port name cache.

Mon Aug 29 20:34:22 2011  fox

      32* netstat.c: Various fixes/enhancements. Still work in progress.

Sun Aug 28 23:30:50 2011  fox

      31* netstat.c: Add dynamic 'netstat' command.

Sat Aug 27 10:40:41 2011  fox

      30* netstat.c: Rename to ifconfig. Add graphs support

      29* proc.c: Implement ^C handler to clear the graphics.

      28* monitor.c: Handle auto-resizing of the mmap when we run out