@@ -1,6 +1,6 @@
 # define	MAJ_VERSION	2
 # define	MIN_VERSION	1
-int	version_build_no = 49;
-# define VERSION_BUILD_NO 49
-char	version_build_date[] = "Wed Sep 14 21:40:17 2011";
+int	version_build_no = 51;
+# define VERSION_BUILD_NO 51
+char	version_build_date[] = "Sun Oct  9 10:25:14 2011";
 
